[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/terminal.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/main.gd" type="Script" id=2]
[ext_resource path="res://scenes/cards.tscn" type="PackedScene" id=3]
[ext_resource path="res://styles/alert_button.tres" type="StyleBox" id=4]
[ext_resource path="res://scenes/file_browser.tscn" type="PackedScene" id=5]
[ext_resource path="res://styles/theme.tres" type="Theme" id=6]
[ext_resource path="res://fonts/big.tres" type="DynamicFont" id=7]
[ext_resource path="res://sounds/success.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/cursor.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.847059, 0.0666667, 0.0666667, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="CircleShape2D" id=2]
radius = 1.0

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
mouse_filter = 2
theme = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Columns" type="HBoxContainer" parent="Rows"]
margin_right = 1904.0
margin_bottom = 782.0
mouse_filter = 2
size_flags_vertical = 3

[node name="Repositories" type="VBoxContainer" parent="Rows/Columns"]
margin_right = 1266.0
margin_bottom = 782.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_constants/separation = 8

[node name="RightSide" type="VBoxContainer" parent="Rows/Columns"]
margin_left = 1271.0
margin_right = 1904.0
margin_bottom = 782.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="LevelInfo" type="VBoxContainer" parent="Rows/Columns/RightSide"]
margin_right = 633.0
margin_bottom = 383.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Menu" type="HBoxContainer" parent="Rows/Columns/RightSide/LevelInfo"]
margin_right = 633.0
margin_bottom = 35.0

[node name="ChapterSelect" type="OptionButton" parent="Rows/Columns/RightSide/LevelInfo/Menu"]
margin_right = 168.0
margin_bottom = 35.0
focus_mode = 0
enabled_focus_mode = 0
text = "Select chapter..."

[node name="LevelSelect" type="OptionButton" parent="Rows/Columns/RightSide/LevelInfo/Menu"]
margin_left = 173.0
margin_right = 317.0
margin_bottom = 35.0
focus_mode = 0
enabled_focus_mode = 0
text = "Select level..."
expand_icon = true

[node name="ReloadButton" type="Button" parent="Rows/Columns/RightSide/LevelInfo/Menu"]
margin_left = 322.0
margin_right = 401.0
margin_bottom = 35.0
focus_mode = 0
enabled_focus_mode = 0
text = "Reload"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardsButton" type="Button" parent="Rows/Columns/RightSide/LevelInfo/Menu"]
visible = false
margin_left = 406.0
margin_right = 478.0
margin_bottom = 35.0
focus_mode = 0
enabled_focus_mode = 0
text = "Cards!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevelButton" type="Button" parent="Rows/Columns/RightSide/LevelInfo/Menu"]
margin_left = 406.0
margin_right = 511.0
margin_bottom = 35.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/normal = ExtResource( 4 )
enabled_focus_mode = 0
text = "Next level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelPanel" type="VBoxContainer" parent="Rows/Columns/RightSide/LevelInfo"]
margin_top = 40.0
margin_right = 633.0
margin_bottom = 383.0
size_flags_vertical = 3

[node name="LevelName" type="RichTextLabel" parent="Rows/Columns/RightSide/LevelInfo/LevelPanel"]
margin_right = 633.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/normal_font = ExtResource( 7 )
text = "Level name here!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Control" parent="Rows/Columns/RightSide/LevelInfo/LevelPanel"]
margin_top = 65.0
margin_right = 633.0
margin_bottom = 343.0
size_flags_vertical = 3

[node name="LevelDescription" type="RichTextLabel" parent="Rows/Columns/RightSide/LevelInfo/LevelPanel/Text"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "Level description here!"
text = "Level description here!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelCongrats" type="RichTextLabel" parent="Rows/Columns/RightSide/LevelInfo/LevelPanel/Text"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "Level description here!"
text = "Level description here!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Index" parent="Rows/Columns/RightSide" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 391.0
margin_right = 633.0
margin_bottom = 582.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
title = "Next Commit:"
mode = 2

[node name="FileBrowser" parent="Rows/Columns/RightSide" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 590.0
margin_right = 633.0
margin_bottom = 782.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
title = "Current environment"

[node name="Controls" type="HBoxContainer" parent="Rows"]
margin_top = 790.0
margin_right = 1904.0
margin_bottom = 1064.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35

[node name="Cards" parent="Rows/Controls" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1266.0
margin_bottom = 274.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Terminal" parent="Rows/Controls" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1271.0
margin_right = 1904.0
margin_bottom = 274.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SuccessSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="Cursor" type="Node2D" parent="."]
position = Vector2( 68.6342, 59.1206 )
script = ExtResource( 9 )

[node name="Area2D" type="Area2D" parent="Cursor"]
input_pickable = false
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cursor/Area2D"]
shape = SubResource( 2 )
[connection signal="button_down" from="Rows/Columns/RightSide/LevelInfo/Menu/ChapterSelect" to="." method="repopulate_chapters"]
[connection signal="button_down" from="Rows/Columns/RightSide/LevelInfo/Menu/LevelSelect" to="." method="repopulate_levels"]
[connection signal="pressed" from="Rows/Columns/RightSide/LevelInfo/Menu/ReloadButton" to="." method="reload_level"]
[connection signal="pressed" from="Rows/Columns/RightSide/LevelInfo/Menu/CardsButton" to="." method="toggle_cards"]
[connection signal="pressed" from="Rows/Columns/RightSide/LevelInfo/Menu/NextLevelButton" to="." method="load_next_level"]
[connection signal="command_done" from="Rows/Controls/Terminal" to="." method="update_repos"]
